--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Technical Documentation</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav id="navbar">
@@ -43,23 +44,28 @@
         <section class="main-section" id="Syntax">
             <header>Syntax</header>
             <p>Syntax is the structure of statements , Here is a simple program typed in C# to discuss the meaning of syntax</p>
-            <pre><code>using System;
-namespace Hello
-{
-    class MyProgram
-    {
-        static void Main(string[] args)
-        {
-            /* That is my first program
-            I created it today*/
-            // Printing text to console and filling the rest of that line
-            Console.WriteLine("Hello World!");
-            // Printing text to console without filling the rest of that line
-            Console.Write("Hello ");
-            Console.WriteLine("AAA");
-        }
-    }
-}</code></pre>
+            <pre>
+                <code>
+                using System;
+            namespace Hello
+            {
+                class MyProgram
+                {
+                    static void Main(string[] args)
+                    {
+                        /* That is my first program
+                        I created it today*/
+                        // Printing text to console and filling the rest of that line
+                        Console.WriteLine("Hello World!");
+                        // Printing text to console without filling the rest of that line
+                        Console.Write("Hello ");
+                        Console.WriteLine("AAA");
+                    }
+                }
+            }
+            </code>
+            <button class="icon"><i class="fa-solid fa-copy"></i></button>
+        </pre>
         </section>
 
         <section class="main-section" id="Data_Types">
@@ -78,15 +84,22 @@ namespace Hello
             <header>Variables</header>
             <p>Variables are containers for storing data values.</p>
             <p>The syntax for declaring a variable and assigning a value to it is as following :</p>
-            <pre><code>data-type variable-name = value(data) ;</code></pre>
+            <pre>
+                <code>data-type variable-name = value(data) ;</code>
+                <button class="icon"><i class="fa-solid fa-copy"></i></button>
+            </pre>
             <p>For example :-</p>
-            <pre><code>int age = 20 ;
-string FirstName = "AAA" ;
-string full_name = "AAA BBB" ;
-double _degree = 80.5 ;
-char grade = 'A' ;
-bool student = true ;
-bool male = true ;</code></pre>
+            <pre>
+                <code>int age = 20 ;
+                string FirstName = "AAA" ;
+                string full_name = "AAA BBB" ;
+                double _degree = 80.5 ;
+                char grade = 'A' ;
+                bool student = true ;
+                bool male = true ;
+                </code>
+                <button class="icon"><i class="fa-solid fa-copy"></i></button>
+            </pre>
         </section>
 
         <section class="main-section" id="Type_Casting">
@@ -95,10 +108,14 @@ bool male = true ;</code></pre>
             <p>Syntax for type casting is :-</p>
             <pre><code>(data-type) data</code></pre>
             <p>For example :-</p>
-            <pre><code>double pi = 3.14 ;
-int myInt = (int) pi ;
-Console.WriteLine(pi) ; // 3.14
-Console.WriteLine(myInt) ; // 3</code></pre>
+            <pre>
+                <code>double pi = 3.14 ;
+                int myInt = (int) pi ;
+                Console.WriteLine(pi) ; // 3.14
+                Console.WriteLine(myInt) ; // 3
+                </code>
+                <button class="icon"><i class="fa-solid fa-copy"></i></button>
+            </pre>
         </section>
 
         <section class="main-section" id="User_Input">
@@ -107,19 +124,51 @@ Console.WriteLine(myInt) ; // 3</code></pre>
             <p>Now you are going to learn how to use Console.ReadLine() to get user input.</p>
             <pre><code>Console.ReadLine();</code></pre>
             <p>For example :-</p>
-            <pre><code>int age ;
-Console.Write("Enter your age:") ;
-age = Console.ReadLine() ;
-Console.WriteLine("You are " + age + " years old") ;</code></pre>
+            <pre>
+                <code>int age ;
+                Console.Write("Enter your age:") ;
+                age = Console.ReadLine() ;
+                Console.WriteLine("You are " + age + " years old") ;
+                </code>
+                <button class="icon"><i class="fa-solid fa-copy"></i></button>
+            </pre>
         </section>
 
         <section class="main-section" id="Booleans">
             <header>Booleans</header>
             <p>Booleans are data types that can be used to control whether something is true or false(yes or no / on or off).</p>
-            <pre><code>bool male = true ;
-bool student = true ;
-bool permission_accepted = false ;</code></pre>
+            <pre>
+                <code>bool male = true ;
+                bool student = true ;
+                bool permission_accepted = false ;
+                </code>
+                <button class="icon"><i class="fa-solid fa-copy"></i></button>
+            </pre>
         </section>
     </main>
+
+    <script>
+        const btns = document.querySelectorAll(".icon");
+        const icon = document.querySelectorAll("fa-solid");
+
+        btns.forEach((btn) => {
+            
+            btn.addEventListener('click', () => {
+                const txt = btn.previousElementSibling.innerHTML;
+                copyToClipboard(txt);
+            })
+
+        })
+
+        async function copyToClipboard(txt) {
+            try {
+                await navigator.clipboard.writeText(txt);
+                alert("Copied");
+            } catch(e) {
+                console.error(`failed ${e}`);
+            }
+        }
+    </script>
+
 </body>
 </html>
